Fix: save images path